--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1 {
   text-align: center;
   background-repeat: no-repeat;
   color: white;
-  border-bottom: 30px solid rgb(58,81,194);
+  border-bottom: 30px solid rgb(58, 81, 194);
 }
 
 #map {
@@ -63,8 +63,8 @@ h1 {
 }
 
 .map-border {
-  border-top: 30px solid rgb(58,81,194);
-  border-bottom: 30px solid rgb(58,81,194);
+  border-top: 30px solid rgb(58, 81, 194);
+  border-bottom: 30px solid rgb(58, 81, 194);
 }
 
 .default-message {
@@ -74,4 +74,12 @@ h1 {
   text-align: center;
   font-family: "Raleway", sans-serif;
   background-color: rgb(255, 255, 255);
+}
+
+.listClass {
+  color: rgb(0, 0, 0);
+  height: 100px;
+  font-size: 20px;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
 }
